# RainShot

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  RWidget.cpp  RWidget.h
