cmake_minimum_required(VERSION 3.5)

project(RainShot VERSION 0.1 LANGUAGES CXX)

set(QT_MIN_VERSION  "5.15.2")

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 ${QT_MIN_VERSION} REQUIRED Widgets)

add_subdirectory(src)
